# gwham

./: .gitignore  CMakeLists.txt  Makefile  Optimizer.hpp  build_debug.sh  build_mpreal_debug.sh  build_mpreal_release.sh  build_release.sh  column_processor.hpp  cscope.out  densityofstate.hpp  ensemble.cpp  ensemble.hpp  ensemble_factory.cpp  ensemble_factory.hpp  exception.hpp  fileio.cpp  fileio.hpp  fileio_utils.cpp  fileio_utils.hpp  functor.hpp  gmbar.cpp  gmbar.hpp  gmbar_gromacs463_umb.cpp  gmxmdp.cpp  gmxmdp.hpp  gmxmdpio.cpp  gmxmdpio.hpp  gmxpullpot.cpp  gmxpullpot.hpp  gmxxvgio.hpp  gnarray.hpp  gwham.cpp  gwham.hpp  gwham_gromacs463.cpp  gwham_gromacs463_umb.cpp  gwham_gromacs463_umbfb  gwham_gromacs463_umbfb.cpp  gwham_umb.cpp  hamiltonian.cpp  (+13 more)
doc/: about.tex  build_doc.sh  dejun.bib  doc.tex  implement.tex  intro.tex  macro.tex  redefcmd.tex  theory.tex  usage.tex
doc/tex/: Makefile  SConstruct  about.tex  doc.tex  gwham.bib  implement.tex  intro.tex  packages.tex  theory.tex  titlecovermisc.tex  usage.tex
example/1lipo-popeg/: getpmf.pl  gwham_mpreal_min.out  gwham_mpreal_min_hist.out  gwham_mpreal_nomin.out  md0_0.hist  md0_0.mdp  md0_0_0x.xvg  md0_1.hist  md0_1.mdp  md0_10.hist  md0_10.mdp  md0_10_0x.xvg  md0_11.hist  md0_11.mdp  md0_11_0x.xvg  md0_12.hist  md0_12.mdp  md0_12_0x.xvg  md0_13.hist  md0_13.mdp  md0_13_0x.xvg  md0_14.hist  md0_14.mdp  md0_14_0x.xvg  md0_15.hist  md0_15.mdp  md0_15_0x.xvg  md0_16.hist  md0_16.mdp  md0_16_0x.xvg  md0_17.hist  md0_17.mdp  md0_17_0x.xvg  md0_18.hist  md0_18.mdp  md0_18_0x.xvg  md0_19.hist  md0_19.mdp  md0_19_0x.xvg  md0_1_0x.xvg  (+72 more)
minimizer/: Simplex.hpp  bfgs.hpp  cg.hpp  matrix.hpp  utils.hpp
mpfrc++/: mpreal.h
